# bayescart

./: .buildinfo  .gitignore  README.md  bayescart.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/bayescart/: bcart.html  eval.html  exceptions.html  node.html  node_data.html  parallel_tempering_base.html  tempering_geom_lik.html  tempering_geometric.html  tempering_pseudo_prior.html  tree.html  utils.html
_sources/: bayescart.rst.txt  index.rst.txt
bayescart/: __init__.py  bcart.py  eval.py  exceptions.py  mytyping.py  node.py  node_data.py  parallel_tempering_base.py  tempering_geom_lik.py  tempering_geometric.py  tempering_pseudo_prior.py  tree.py  utils.py
docs/source/: conf.py  index.rst
examples/: CGM98.py  CGM98_overview.ipynb  CGM98_tempering.py
tests/: test_bayescart.py
